--- a/projects.html
+++ b/projects.html
@@ -29,14 +29,14 @@
     <br/><br/><br/>
 <h2 class="centerHead">Snippets of my Projects</h2>
 
-<div class="w3-content w3-display-container">
+<div class="container">
   <img class="myPictures" src="https://tse3.mm.bing.net/th?id=OIP.roeJGz3eeyhxK3XRQ0LxpQHaFj&pid=Api&P=0" style="width:100%">
   <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.1YM53mG10H_U25iPjop83QHaEo&pid=Api&P=0" style="width:100%">
   <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.kGmuLIMjc1TVVqyC43yAZgHaEK&pid=Api&P=0" style="width:100%">
   <img class="myPictures" src="https://tse4.mm.bing.net/th?id=OIP.i-Xdb3eu9ihga0frrt1tWQHaEo&pid=Api&P=0" style="width:100%">
 
-  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+  <button class="buTn" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="buTn" onclick="plusDivs(1)">&#10095; </button>
 </div>
 
 <script>
