Buttons Work, Image unaligned
The buttons now work, but the image is unaligned

--- a/projects.html
+++ b/projects.html
@@ -35,8 +35,8 @@
   <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.kGmuLIMjc1TVVqyC43yAZgHaEK&pid=Api&P=0" style="width:100%">
   <img class="myPictures" src="https://tse4.mm.bing.net/th?id=OIP.i-Xdb3eu9ihga0frrt1tWQHaEo&pid=Api&P=0" style="width:100%">
 
-  <button class="buTn" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="buTn" onclick="plusDivs(1)">&#10095; </button>
+  <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="next" onclick="plusDivs(1)">&#10095; </button>
 </div>
 
 <script>
