Buttons fully work
The buttons fully work now, need to get my images and captions on each image now

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,13 @@
   <body style="background-color:rgb(221, 214, 214);"></body>
 </head>
 <style>
-.myPictures {display:none;}
+.myPictures {
+  display:block;
+}
+img {
+  margin-left: 105%;
+  margin-top: 20%;
+}
 </style>
 <body>
     <div class="header">
@@ -32,8 +38,8 @@
 <div class="container">
   <img class="myPictures" src="https://tse3.mm.bing.net/th?id=OIP.roeJGz3eeyhxK3XRQ0LxpQHaFj&pid=Api&P=0" style="width:100%">
   <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.1YM53mG10H_U25iPjop83QHaEo&pid=Api&P=0" style="width:100%">
-  <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.kGmuLIMjc1TVVqyC43yAZgHaEK&pid=Api&P=0" style="width:100%">
-  <img class="myPictures" src="https://tse4.mm.bing.net/th?id=OIP.i-Xdb3eu9ihga0frrt1tWQHaEo&pid=Api&P=0" style="width:100%">
+  <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.kGmuLIMjc1TVVqyC43yAZgHaEK&pid=Api&P=0" style="width:100%" >
+  <img class="myPictures" src="https://tse4.mm.bing.net/th?id=OIP.i-Xdb3eu9ihga0frrt1tWQHaEo&pid=Api&P=0" style="width:100%" >
 
   <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
   <button class="next" onclick="plusDivs(1)">&#10095; </button>
