--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="nav.css">
@@ -10,44 +12,40 @@
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Lobster">
   <title>Homepage</title>
-  <!--Benjamin Peterson, CTI110-0003--->
-  <body style="background-color:rgb(221, 214, 214);"></body>
+   <!--Benjamin Peterson, CTI110-0003--->
 </head>
 
-<style>
-  footer {
-    text-align: center;
-    padding: 3px;
-    background-color: rgb(88, 150, 168);
-    color: white;
-  }
-  </style>
-
 <body>
-    <div class="header">
-        <a class="title" href="index.html"><!--placeholder--></a>
-        <div class="navbar">
-          <a href="index.html">Homepage</a>
-          <a href="about.html">About Me</a>
-          <a href="projects.html">Projects</a>
-          <a href="contact.html">Contact Info</a>
-        </div>
-    </div>
-    <br/>
-    <h1>Homepage</h1>
-    <p>Hello, welcome to my personal portfolio website. This text is not fully complete yet, but you are welcome to check back in a few days and see how the website progresses!!</p>
-    <p>This document was last saved on</p>
-    <p id="modify"></p>
 
-    <script>
-    let text = document.lastModified;
-    document.getElementById("modify").innerHTML = text;
-    </script>
-    <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-    <!--Placeholder above becasue I forgot how to allign footer to bottom-->
-        <footer>
-          <p>Questions? Visit the <a href="about.html">about</a> section for more information</p>
-      </footer>
+  <!-- Nav bar -->
+  <div class="header">
+      <div class="navbar">
+        <a href="index.html">Homepage</a>
+        <a href="about.html">About Me</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact Info</a>
+  </div>
+  </div>
+  <div id="main">
+    <div class="about"></div>
+    <hr>
+
+    <div class="organized-gallery">
+      <h1>Benjamin Peterson</h1>
+      <div class="gallery-section-2">
+        <h2>Welcome to my Website! </h2>
+        <div class="event">
+          <img
+            src="C:\Users\bpete\Downloads\blueimagephotoshop.png">
+        </div>
+        <div class="event">
+        <p>Welcome to my Website! My name is Benjamin Peterson</p>
+        <p>placeholder for extra info</p>
+        </div>
+      </div>
+      <hr>
+    </div>
+  </div>
 </body>
 <!--This file is my own work and I typed everything, Benjamin Peterson-->
 </html>
