--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Lobster">
   <title>Homepage</title>
-   <!--Benjamin Peterson, CTI110-0003--->
+   <!--Benjamin Peterson, CTI110-0003-->
 </head>
 
 <body>
@@ -35,8 +35,7 @@
       <div class="gallery-section-2">
         <h2>Welcome to my Website! </h2>
         <div class="event">
-          <img
-            src="C:\Users\bpete\Downloads\blueimagephotoshop.png">
+          <img src="https://lh3.googleusercontent.com/a9rQQ6V0-8Dwbc6wRWmWcU0zjj85moBswQxH9rArAkXKBLWA93JffYSSh1MSmzZqGQZrYyvXVHHQd-Pz64DRB-Xy_eF7B2bhd_Tbn11t", alt="Blue Image with swirls">
         </div>
         <div class="event">
         <p>Welcome to my Website! My name is Benjamin Peterson</p>
