--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="gallery-section-2">
         <h2>Welcome to my Website! </h2>
         <div class="event">
-          <img src="https://lh3.googleusercontent.com/a9rQQ6V0-8Dwbc6wRWmWcU0zjj85moBswQxH9rArAkXKBLWA93JffYSSh1MSmzZqGQZrYyvXVHHQd-Pz64DRB-Xy_eF7B2bhd_Tbn11t",alt="Blue Image with swirls">
+          <img src="https://lh3.googleusercontent.com/a9rQQ6V0-8Dwbc6wRWmWcU0zjj85moBswQxH9rArAkXKBLWA93JffYSSh1MSmzZqGQZrYyvXVHHQd-Pz64DRB-Xy_eF7B2bhd_Tbn11t">
         </div>
         <div class="event">
         <p>Welcome to my Website! My name is Benjamin Peterson</p>
