--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="nav.css">
@@ -10,7 +10,7 @@
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Lobster">
   <title>Homepage</title>
-  <!--Benjamin Peterson, CTI110-0003--->
+  <!--Benjamin Peterson, CTI110-0003-->
   <body style="background-color:rgb(221, 214, 214);"></body>
 </head>
 
