--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <title>Homepage</title>
   <!--Benjamin Peterson, CTI110-0003-->
   <body style="background-color:rgb(221, 214, 214);"></body>
-<head>
+</html>
 
 <style>
   footer {
