--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <body style="background-color:rgb(221, 214, 214);"></body>
 </html>
 
-<style>
+<tyle>
   footer {
     text-align: center;
     padding: 3px;
