--- a/about.html
+++ b/about.html
@@ -14,14 +14,14 @@
   <body style="background-color:rgb(221, 214, 214);"></body>
 </html>
 
-<tyle>
+<style>
   footer {
     text-align: center;
     padding: 3px;
     background-color: rgb(88, 150, 168);
     color: white;
   }
-  </style>
+</style>
 
 <body>
     <div class="header">
