--- a/about.html
+++ b/about.html
@@ -12,16 +12,16 @@
   <title>Homepage</title>
   <!--Benjamin Peterson, CTI110-0003-->
   <body style="background-color:rgb(221, 214, 214);"></body>
-</html>
+</head>
 
-  <style>
+<style>
   footer {
     text-align: center;
     padding: 3px;
     background-color: rgb(88, 150, 168);
     color: white;
   }
-  </style>
+</style>
 
 <body>
     <div class="header">
