--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <title>Homepage</title>
   <!--Benjamin Peterson, CTI110-0003-->
   <body style="background-color:rgb(221, 214, 214);"></body>
-</head>
+</html>
 
 <style>
   footer {
@@ -21,7 +21,7 @@
     background-color: rgb(88, 150, 168);
     color: white;
   }
-</style>
+  </style>
 
 <body>
     <div class="header">
