--- a/about.html
+++ b/about.html
@@ -12,19 +12,18 @@
   <title>Homepage</title>
   <!--Benjamin Peterson, CTI110-0003-->
   <body style="background-color:rgb(221, 214, 214);"></body>
-</html>
+</head>
 
-
+<style>
+  footer {
+    text-align: center;
+    padding: 3px;
+    background-color: rgb(88, 150, 168);
+    color: white;
+  }
+</style>
 
 <body>
-  <style>
-    footer {
-      text-align: center;
-      padding: 3px;
-      background-color: rgb(88, 150, 168);
-      color: white;
-    }
-  </style>
     <div class="header">
         <a class="title" href="index.html"><!--placeholder--></a>
         <div class="navbar">
