--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="nav.css">
@@ -10,8 +10,8 @@
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Lobster">
   <title>Homepage</title>
-  <!--Benjamin Peterson, CTI110-0003--->
-  <body style="background-color:rgb(221, 214, 214);"></body>
+  <!--Benjamin Peterson, CTI110-0003-->
+
 </head>
 <style>
 .myPictures {
@@ -22,7 +22,7 @@ img {
   margin-top: 20%;
 }
 </style>
-<body>
+<body style="background-color:rgb(221, 214, 214);">
     <div class="header">
         <a class="title" href="index.html"><!--placeholder--></a>
         <div class="navbar">
@@ -32,7 +32,7 @@ img {
           <a href="contact.html">Contact Info</a>
         </div>
     </div>
-    <br/><br/><br/>
+    <br><br><br>
 <h2 class="centerHead">Snippets of my Projects</h2>
 
 <div class="container">
