--- a/projects.html
+++ b/projects.html
@@ -37,10 +37,10 @@
 <h2 class="centerHead">Snippets of my Projects</h2>
 
 <div class="container">
-  <img class="myPictures" src="https://tse3.mm.bing.net/th?id=OIP.roeJGz3eeyhxK3XRQ0LxpQHaFj&pid=Api&P=0" style="width:100%" alt="Blue Image with Swirls">
-  <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.1YM53mG10H_U25iPjop83QHaEo&pid=Api&P=0" style="width:100%" alt="Blue Image with Swirls">
-  <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.kGmuLIMjc1TVVqyC43yAZgHaEK&pid=Api&P=0" style="width:100%" alt="Blue Image with Swirls" >
-  <img class="myPictures" src="https://tse4.mm.bing.net/th?id=OIP.i-Xdb3eu9ihga0frrt1tWQHaEo&pid=Api&P=0" style="width:100%" alt="Blue Image with Swirls" >
+  <img class="myPictures" src="https://tse3.mm.bing.net/th?id=OIP.roeJGz3eeyhxK3XRQ0LxpQHaFj&pid=Api&P=0" style="width:100%" alt="Blue Image witha Swirls">
+  <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.1YM53mG10H_U25iPjop83QHaEo&pid=Api&P=0" style="width:100%" alt="Blue Imdage with Swirls">
+  <img class="myPictures" src="https://tse1.mm.bing.net/th?id=OIP.kGmuLIMjc1TVVqyC43yAZgHaEK&pid=Api&P=0" style="width:100%" alt="Blue Idmage with Swirls" >
+  <img class="myPictures" src="https://tse4.mm.bing.net/th?id=OIP.i-Xdb3eu9ihga0frrt1tWQHaEo&pid=Api&P=0" style="width:100%" alt="Blue Image with Swirlds" >
 
   <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
   <button class="next" onclick="plusDivs(1)">&#10095; </button>
