--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,18 @@
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Lobster">
   <title>Homepage</title>
-  <!--Benjamin Peterson, CTI110-0003--->
-  <body style="background-color:rgb(221, 214, 214);"></body>
+  <!--Benjamin Peterson, CTI110-0003-->
+  <style>
+    footer {
+      text-align: center;
+      padding: 3px;
+      background-color: rgb(88, 150, 168);
+      color: white;
+    }
+    </style>
 </head>
 
-<style>
-  footer {
-    text-align: center;
-    padding: 3px;
-    background-color: rgb(88, 150, 168);
-    color: white;
-  }
-  </style>
-
-<body>
+<body style="background-color:rgb(221, 214, 214);">
     <div class="header">
         <a class="title" href="index.html"><!--placeholder--></a>
         <div class="navbar">
