--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,19 @@
 	<img src="https://s.yimg.com/fz/api/res/1.2/6.1sJqIySlxah724K1v9xA--~C/YXBwaWQ9c3JjaGRkO2ZpPWZpdDtoPTEyMDtxPTgwO3c9MTIw/https://s.yimg.com/zb/imgv1/051c505f-dc29-3303-81b2-5828c6e3b2e2/t_500x300" alt="Click to visit my Linkedin">
 	</a>
 
-              
+  <form action="submit-form.php" method="post">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name"><br>
+  
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email"><br>
+  
+    <label for="number">Number:</label>
+    <input type="tel" id="number" name="number"><br>
+  
+    <input type="submit" value="Submit">
+  </form>
+   
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <!--Placeholder above becasue I forgot how to allign footer to bottom-->
         <footer>
