--- a/about.html
+++ b/about.html
@@ -41,6 +41,21 @@
     let text = document.lastModified;
     document.getElementById("modify").innerHTML = text;
     </script>
+
+<form action="submit-form.php" method="post">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name"><br>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email"><br>
+
+  <label for="number">Number:</label>
+  <input type="tel" id="number" name="number"><br>
+
+  <input type="submit" value="Submit">
+</form>
+ 
+
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <!--Placeholder above becasue I forgot how to allign footer to bottom-->
    
