--- a/about.html
+++ b/about.html
@@ -42,18 +42,48 @@
     document.getElementById("modify").innerHTML = text;
     </script>
 
-<form action="submit-form.php" method="post">
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name"><br>
+<head>
+	<title>Form Submission Notification</title>
+  <style>
+		form {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+      margin-top: 0px;
+		}
 
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email"><br>
+		input, button {
+			margin: 10px;
+      margin-top: 0px;
+			padding: 5px;
+			border-radius: 5px;
+			border: 1px solid gray;
+		}
+	</style>
+</head>
+<body>
+	<h3>Submit Your Information</h3>
+	<form>
+		<label for="name">Name:</label>
+		<input type="text" id="name" name="name"><br><br>
 
-  <label for="number">Number:</label>
-  <input type="tel" id="number" name="number"><br>
+		<label for="email">Email:</label>
+		<input type="email" id="email" name="email"><br><br>
 
-  <input type="submit" value="Submit">
-</form>
+		<label for="number">Number:</label>
+		<input type="tel" id="number" name="number"><br><br>
+
+		<input type="submit" value="Submit" onclick="showNotification()">
+	</form>
+
+	<script>
+		function showNotification() {
+			alert("Thank you for submitting your information!");
+		}
+	</script>
+</body>
  
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
