--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </script>
 
 
-	<title>Form Submission Notification</title>
+	<h6>Form Submission Notification</h6>
   <style>
 		form {
 			display: flex;
