--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <h1>Benjamin Peterson</h1>
       <div class="gallery-section-2">
         <h2>Welcome to my Website! </h2>
-        <div class="event">
-          <img src="https://lh3.googleusercontent.com/a9rQQ6V0-8Dwbc6wRWmWcU0zjj85moBswQxH9rArAkXKBLWA93JffYSSh1MSmzZqGQZrYyvXVHHQd-Pz64DRB-Xy_eF7B2bhd_Tbn11t" alt="Blue Image with Swirls">
+        <div class="smallBlue">
+          <img src="https://drive.google.com/uc?export=view&id=15o1HWafncWFqDZsxIK8mPyyf_x0tynM5" alt="Blue Image with Swirls">
         </div>
-        <div class="event">
+        <div class="centerImage">
         <p>Welcome to my Website! My name is Benjamin Peterson</p>
         <p>placeholder for extra info</p>
         </div>
