--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
   </div>
   </div>
   <div id="main">
-    <div class="about"></div>
-    <hr>
-
-    <div class="organized-gallery">
       <h1>Benjamin Peterson</h1>
-      <div class="gallery-section-2">
-        <h2>Welcome to my Website! </h2>
-        <div class="smallBlue">
-          <img src="https://drive.google.com/uc?export=view&id=15o1HWafncWFqDZsxIK8mPyyf_x0tynM5" alt="Blue Image with Swirls">
-        </div>
-        <div class="centerImage">
+      <h2>Welcome to my Website! </h2>
+      <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
+    </style>
+      <img src="https://drive.google.com/uc?export=view&id=15o1HWafncWFqDZsxIK8mPyyf_x0tynM5" alt="Blue Image with Swirls">
+
+        <div class="centerText">
         <p>Welcome to my Website! My name is Benjamin Peterson</p>
         <p>placeholder for extra info</p>
         </div>
