--- a/about.html
+++ b/about.html
@@ -54,9 +54,10 @@
     </div>
     <br>
     <h1>About Me</h1>
-    <p>Hello, welcome to my personal portfolio website. This text is not fully complete yet, but you are welcome to check back in a few days and see how the website progresses!!</p>
-    <p>This document was last saved on</p>
-    <p id="modify"></p>
+    <p class="centerText">I have worked as a soccer referee for 2 years in Wisconsin before moving to North Carolina in the summer of 2019. I have been employed at Lowes Foods (grocery store) since March 2021, and have learned valuable workplace skills such as customer interaction and working with co workers. I have been using the Adobe Suite since late 2019, and primarily use Adobe Premiere Pro, Illustrator, Photoshop, and InDesign. However, I am not Adobe certified in these fields due to COVID-19 closing testing opportunities, and the testing platform not working properly. I am also an avid computer enthusiast, and love pretty much anything computers. I have taken apart and rebuilt my computer a few times, and have learned how to react to computer errors(even have a Raspberry Pi, a mini computer that runs Linux, but not too experienced with it). I have a little under a year in Python experience, with JavaScript experience as well in CS classes. I am hoping to pursue a degree for some form of Computer Science, and I am open for any kind of internship or experience building job related to that field. I am currently a senior at Panther Creek High School, and am participating in Deca, TSA, and other clubs. I also play soccer as well, and I am a captain of the soccer team and received the awards for 1st team all conference and 1st team all region.</p>
+    
+    <p class="centerText">This document was last saved on</p>
+    <p class="centerText" id="modify"></p>
 
     <script>
     let text = document.lastModified;
@@ -88,11 +89,8 @@
 
  
 <footer>
-  <p>Questions? Visit the <a href="about.html">about</a> section for more information</p>
+  <p>Would you like additional information? Visit the <a href="contact.html">contact</a> page for my contact information</p>
 </footer>
-    
-    <!--Placeholder above becasue I forgot how to allign footer to bottom-->
-   
 </body>
 
 <!--This file is my own work and I typed everything, Benjamin Peterson-->
