--- a/projects.html
+++ b/projects.html
@@ -66,5 +66,18 @@ function showDivs(n) {
 }
 </script>
 
+<style>
+  footer {
+    text-align: center;
+    padding: 3px;
+    background-color: rgb(88, 150, 168);
+    color: white;
+  }
+</style>
+<br><br><br><br><br><br>
+<footer>
+  <p>Questions? Visit the <a href="about.html">about</a> section for more information</p>
+</footer>
+
 </body>
 </html>
