--- a/projects.html
+++ b/projects.html
@@ -72,9 +72,10 @@ function showDivs(n) {
     padding: 3px;
     background-color: rgb(88, 150, 168);
     color: white;
+    position: 10
   }
 </style>
-<br><br><br><br><br><br>
+
 <footer>
   <p>Questions? Visit the <a href="about.html">about</a> section for more information</p>
 </footer>
